--- a/about.html
+++ b/about.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"> 
+        <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="CV" href="curriculo.html">Curriculo</a>
         </nav>
     </header>
+
     <main class="apresentacao">
-        <section class="apresentacao__conteudo__titulo">
-            <h1>Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto__about"> Olá! Sou a Vitória, uma estudante de administração que é apaixonada por programação(front end) e análise de dados. Minha abordagem centrada na resolução de problemas e na busca constante de inovação me destacou em diversos projetos, evidenciando minhas habilidades técnicas e aptidão para o trabalho em equipe. </p>
-            <p class="apresentacao__conteudo__texto__about">Além do profissionalismo, minha paixão por aprender reflete minha versatilidade e dedicação. Estou animada em contribuir para desafios empolgantes e ansiosa para explorar novas oportunidades de colaboração. Vamos criar algo extraordinário juntos! </p>
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou a Vitória, uma estudante de administração que é 
+                apaixonada por programação(front end) e análise de dados. 
+                Minha abordagem centrada na resolução de problemas e na 
+                busca constante de inovação me destacou em diversos projetos, evidenciando 
+                minhas habilidades técnicas 
+                e aptidão para o trabalho em equipe.
+            </p>
+            <p class="apresentacao__conteudo__texto">
+                Além do profissionalismo, 
+                minha paixão por aprender reflete minha versatilidade e dedicação. 
+                Estou animada em contribuir para desafios empolgantes e ansiosa para 
+                explorar novas oportunidades de colaboração. Vamos criar algo 
+                extraordinário juntos!</p>
         </section>
-        <img class="apresentacao__imagem__about" src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Imagem de Vitória Lima">
     </main>
-    <footer class="rodape__about">
+
+    <footer class="rodape">
         <p>Desenvolvido por Vitória Lima.</p>
     </footer>
 </body>
+
 </html>
