--- a/curriculo.html
+++ b/curriculo.html
@@ -25,7 +25,7 @@
         </section>
         <img src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
     </main>
-    <footer class="rodape__curriculo">
+    <footer class="rodape">
         <p>Desenvolvido por Vitória Lima.</p>
     </footer>
 </body>
