--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu"> 
+        <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="CV" href="curriculo.html">Curriculo</a>
@@ -16,24 +19,32 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Vitória Lima, desenvolvedora Front-end com especialidade em Javascript, React, Typescript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
+            class="titulo-destaque">com um Front-end de qualidade!
+            </strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Vitória Lima, desenvolvedora
+            Front-end com especialidade em Javascript, React, Typescript, HTML 
+            e CSS.
+            Ajudo pequenos negócios e designers a
+            colocarem em prática boas ideias. Vamos
+            conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-            <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/vitoriacamillylima/">
-                <img src="./assets/linkedin.png">
-                LinkedIn
-            </a>
-            <a class="apresentacao__links__navegacao" href="https://github.com/viccamy">
-                <img src="./assets/github.png">
-                GitHub
-            </a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
+                <a class="apresentacao__links__navegacao" href="https://github.com/viccamy">
+                    <img src="./assets/github.png">
+                    Github
+                </a>
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/vitoriacamillylima/">
+                    <img src="./assets/linkedin.png">
+                    linkedin
+                </a>
             </div>
         </section>
-        <img class="apresentacao__imagem__home" src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Imagem de Vitória Lima">
     </main>
-    <footer class="rodape__index">
-    <p>Desenvolvido por Vitória Lima.</p>
+    <footer class="rodape">
+        <p>Desenvolvido por Vitória Lima.</p>
     </footer>
 </body>
+
 </html>
