--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 explorar novas oportunidades de colaboração. Vamos criar algo 
                 extraordinário juntos!</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Imagem de Vitória Lima">
+        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
     </main>
 
     <footer class="rodape">
