--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
-            class="titulo-destaque">com um Front-end de qualidade!
+            class="titulo-destaque"> com um Front-end de qualidade!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Vitória Lima, desenvolvedora
             Front-end com especialidade em Javascript, React, Typescript, HTML 
@@ -40,7 +40,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Imagem de Vitória Lima">
+        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vitória Lima.</p>
