--- a/curriculo.html
+++ b/curriculo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículo</title>
+    <title>Curriculo</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
             <h1 class="secao__titulo">Estudos</h1>
                 <p class="secao__texto">Possuo uma formação acadêmica em andamento em <strong class="titulo-destaque">Administração pela Universidade Federal de Campina Grande</strong>. Explorei metodologias ágeis como Scrum e Kanban, aplicando-as em projetos acadêmicos e desenvolvendo uma abordagem eficiente para a resolução de problemas. Estou comprometida em buscar constantemente novas oportunidades de aprendizado e aprimoramento. </p>
         </section>
-        <img src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
+        <img class="curriculo__imagem" src="./assets/Imagem.png" alt="Imagem de Vitória Lima">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Vitória Lima.</p>
